[package]
name = "request-fedi-comments"
authors = ["kleines Filmröllchen <filmroellchen@serenityos.org>"]
repository = "https://github.com/kleinesfilmroellchen/request-fedi-comments"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.72"
log = { version = "0.4.19", default-features = false, features = ["std"] }
reqwest = { version = "0.11.18", default-features = false, features = [
	"native-tls",
] }
yaserde = { version = "0.8.0", features = ["yaserde_derive"] }
yaserde_derive = "0.8.0"
elefren = "0.22.0"
rand = "0.8.5"
tokio = { version = "1.29.1", default-features = false, features = [
	"macros",
	"rt",
] }
dotenv = "0.15.0"
tokio-cron-scheduler = "0.9.4"
env_logger = { version = "0.10.0", default-features = false, features = [
	"color",
	"humantime",
] }
xml-rs = "0.8.21"

[profile.dev]
opt-level = 3
